objects/Policy_Document_History__c.object
<CustomObject>
    <description>This object tracks changes made on Policy Document by Policy Doc Sync program.</description>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_History_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Policy Doc History External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Document__c</fullName>
        <label>Policy Document</label>
        <referenceTo>Policy_Document_On_Certificate__c</referenceTo>
        <relationshipLabel>Policy Document History</relationshipLabel>
        <relationshipName>Policy_Document_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Policy Document History</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Document History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>